test_programs/ok/3.concl
console_pack my_console_pack {
	console {
		storage: 1024 GB,
		display {
			diagonal: 30 inch,
			type: LED,
			resolution: Full-HD
		}
	},
	controller {
		colour: blue
	},
	controller {
		colour: silver
	},
	controller {
		colour: black
	},
	controller {
		colour: white
	},
	game {
		name: Hedwig the Hedgehog
	}
}