test_programs/bad/13.concl
console_pack my_console_pack {
	console {
		storage: 1024 GB,
		display {
			diagonal: 30 inch,
			type: LED,
			resolution: Full-HD
		}
	},
	controller {
		colour: blue
	},
	controller {
		colour: red
	},
	game {
		name: Link's Resolution
	}
}